UPDATE: Upgraded to new API version to handle subscriptions (payment intent removed from 2024+), upgraded job schedule to handle jobs in batches with a global redis indicator which prevents jobs from overlapping waiting for the previous job to complete

--- a/assets/stylesheets/common/main.scss
+++ b/assets/stylesheets/common/main.scss
@@ -45,7 +45,7 @@ textarea[readonly] {
   font-weight: 500;
   font-size: .98rem;
 
-  border-radius: 5px;
+  // border-radius: 5px;
   margin: 3px 0px;
   padding: 8px 10px;
 
